# git_cli

./: .gitignore  CMakeLists.txt  README.md  install-sha1.sh  main.cpp
include/: configParser.h  gitBlob.h  gitCommit.h  gitTree.h  object.h  repository.h
src/: configParser.cpp  gitBlob.cpp  gitCommit.cpp  gitTree.cpp  object.cpp  repository.cpp
tests/: git-init_test.cpp
